--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ input {
 
 .content {
 	padding-inline: 2.5rem;
-	padding-block-start: 2.5rem;
+	padding-block: 2.5rem 4rem;
 }
 
 .content header {
